Fix logo shining overflowing the page in the X axis

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -4,6 +4,7 @@ html {
 
 .homepage-image {
   position: relative;
+  overflow: hidden;
 }
 
 .homepage-image img {
